--- a/cmake/index.html.in
+++ b/cmake/index.html.in
@@ -103,7 +103,7 @@
       <p class="bottom-note">
         Download native versions at 
         <a href="https://github.com/cheyao/opengl/releases" target="_blank" rel="noopener noreferrer">GitHub</a> 
-        for better performance.
+	for better performance. <a href="https://youtu.be/4TOIlzZYmBc" target="_blank">Video demo here</a>
       </p>
     </div>
 
